# github-copilot-training

./: pyproject.toml
app/: main.py
tests/: conftest.py
tests/integration/: test_main.py
tests/unit/: test_main.py
trainings-tasks/: 00_prerequists_intro.md  01_context_and_control.md  06_subagents.md
